--- a/WhackAMoleGame.xaml
+++ b/WhackAMoleGame.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Games.WhackAMoleGame"
+<Page x:Class="Games.WhackAMoleGame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,12 +14,14 @@
             <ColumnDefinition Width="680*"/>
         </Grid.ColumnDefinitions>
         <Button Content="Back To Arcade" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Click" FontSize="15" Height="22" Width="121" Margin="548,0,0,0" Grid.Column="1"/>
-        <Label Content="Score: 0" HorizontalAlignment="Left" Margin="27,56,0,0" VerticalAlignment="Top" Height="38" Width="257" FontSize="24" Grid.ColumnSpan="2"/>
+        <Label x:Name="Score" Content="Score: 0" HorizontalAlignment="Left" Margin="27,56,0,0" VerticalAlignment="Top" Height="38" Width="257" FontSize="24" Grid.ColumnSpan="2"/>
         <Label Grid.Column="1" x:Name="Question" Content="Question" HorizontalAlignment="Left" Margin="165,131,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Tag="question"/>
-        <Label x:Name="choice1" Content="Choice1" HorizontalAlignment="Left" Margin="60,225,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Label x:Name="choice2" Grid.Column="1" Content="Choice2" HorizontalAlignment="Left" Margin="381,225,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold"/>
-        <Label x:Name="choice3" Content="Choice3" HorizontalAlignment="Left" Margin="60,327,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Label x:Name="choice4" Grid.Column="1" Content="Choice4" HorizontalAlignment="Left" Margin="381,327,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" />
+
+        <!--Answer buttons-->
+        <Button x:Name="choice1" Content="Choice1" HorizontalAlignment="Left" Margin="60,225,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Grid.ColumnSpan="2" Click="choice1click"/>
+        <Button x:Name="choice2" Grid.Column="1" Content="Choice2" HorizontalAlignment="Left" Margin="381,225,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Click="choice2click"/>
+        <Button x:Name="choice3" Content="Choice3" HorizontalAlignment="Left" Margin="60,327,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Grid.ColumnSpan="2" Click="choice3click"/>
+        <Button x:Name="choice4" Grid.Column="1" Content="Choice4" HorizontalAlignment="Left" Margin="381,327,0,0" VerticalAlignment="Top" FontSize="24" Background="Purple" FontWeight="Bold" Click="choice4click" />
 
     </Grid>
 </Page>
